--- a/templates/team.html
+++ b/templates/team.html
@@ -5,13 +5,20 @@
 {% endblock %}
 
 {% block body %}
-  {% for member in this.pagination.items %}
-    <div>
-      <img src="{{ member.avatar }}">
-      <p>{{ member.name }}</p>
-      <p>Since {{ member.active_since.strftime('%Y') }} — {{ member.location }}</p>
-      <p>{{ member.description }}</p>
-      <a href="https://github.com/{{ member.github_nickname }}">{{ member.github_nickname }}</a>
-    </div>
-  {% endfor %}
+  <div class="container flex">
+    {% for member in this.pagination.items %}
+      <div class="w-1/3 py-10 px-5">
+        <img src="{{ member.avatar }}"
+             class="rounded-full w-48 h-48">
+        <p class="font-semibold">{{ member.name }}</p>
+        <div class="text-sm">
+          <p class="text-grey-dark">
+            Since {{ member.active_since.strftime('%Y') }} — {{ member.location }}
+          </p>
+          <p>{{ member.description }}</p>
+        </div>
+        <a href="https://github.com/{{ member.github_nickname }}">{{ member.github_nickname }}</a>
+      </div>
+    {% endfor %}
+  </div>
 {% endblock %}
