--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -2,19 +2,19 @@ doctype
 html
   head
     meta(charset="utf-8")
-    meta(name="description" content="DDD Toolkit")
+    meta(name="description" content="Domain Driven Design Toolkit")
     meta(name="author" content="Artem Malyshev")
     meta(name="apple-mobile-web-app-capable" content="yes")
     meta(name="apple-mobile-web-app-status-bar-style" content="black-translucent")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
-    title DDD Toolkit
+    title Domain Driven Design Toolkit
   body
     .reveal
       .slides
         section
-          h1 DDD
-          h2 Toolkit
-          h4 Artem Malyshev
+          h2 Domain Driven Design Toolkit
+          h4
+            a(href="https://github.com/proofit404") Artem Malyshev
         section
           h2 BIO
           ul
