--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -26,11 +26,11 @@ html
           p.fragment #[b Accidental complexity] refers to challenges that developers unintentionally make for themselves as a result of trying to solve a problem.
           p.fragment #[b Essential complexity] is just the nature of the beast you're trying to tame.
         section
-          h2 What is domain-driven design?
+          h2 What is the domain-driven design?
           p.fragment Focus on the core complexity and opportunity in the domain
-          p.fragment Explore models in a collaboratino of domain experts and software experts
-          p.fragment Write software that express those models explicitly
-          p.fragment Speack #[b ubiquitous language] with in a #[b bounded context]
+          p.fragment Explore models in a collaboration of domain experts and software experts
+          p.fragment Write software that expresses those models explicitly
+          p.fragment Speak #[b ubiquitous language] within a #[b bounded context]
         section
           h2 Not about technology
           p You have to master the tool first, than you can focus on #[b DDD].
