--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -34,6 +34,11 @@ html
         section
           h2 Not about technology
           p You have to master the tool first, than you can focus on #[b DDD].
+        section(data-background-image=require("./pics/aggregate-root-1.jpg") data-background-size="contain")
+        section(data-background-image=require("./pics/aggregate-root-2.jpg") data-background-size="contain")
+        section(data-background-image=require("./pics/aggregate-root-3.jpg") data-background-size="contain")
+        section(data-background-image=require("./pics/aggregate-root-4.jpg") data-background-size="contain")
+        section(data-background-image=require("./pics/aggregate-root-5.jpg") data-background-size="contain")
         section
           h2 What is a model?
           p.fragment #[b HINT:] Not a UML diagram
