Add DDD schema slide.

--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -31,6 +31,7 @@ html
           p.fragment Explore models in a collaboration of domain experts and software experts
           p.fragment Write software that expresses those models explicitly
           p.fragment Speak #[b ubiquitous language] within a #[b bounded context]
+        section(data-background-image=require("./pics/ddd-schema.jpg") data-background-size="contain")
         section
           h2 Not about technology
           p You have to master the tool first, than you can focus on #[b DDD].
