--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -26,6 +26,10 @@ html
           p.fragment #[b Accidental complexity] refers to challenges that developers unintentionally make for themselves as a result of trying to solve a problem.
           p.fragment #[b Essential complexity] is just the nature of the beast you're trying to tame.
         section
+          img(src=require("./pics/domain-driven-design.jpg")).plain
+        section
+          img(src=require("./pics/implementing-domain-driven-design.jpg")).plain
+        section
           h2 What is the domain-driven design?
           p.fragment Focus on the core complexity and opportunity in the domain
           p.fragment Explore models in a collaboration of domain experts and software experts
