Add interrupted programmer slide.

--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -25,6 +25,7 @@ html
           h2 Complexity
           p.fragment #[b Accidental complexity] refers to challenges that developers unintentionally make for themselves as a result of trying to solve a problem.
           p.fragment #[b Essential complexity] is just the nature of the beast you're trying to tame.
+        section(data-background-image=require("./pics/interrupted-programmer.jpg") data-background-size="contain")
         section
           img(src=require("./pics/domain-driven-design.jpg")).plain
         section
