--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -27,6 +27,8 @@ html
           p.fragment #[b Essential complexity] is just the nature of the beast you're trying to tame.
         section(data-background-image=require("./pics/interrupted-programmer.jpg") data-background-size="contain")
         section
+          img(src=require("./pics/callback-hell.jpg")).plain
+        section
           img(src=require("./pics/domain-driven-design.jpg")).plain
         section
           img(src=require("./pics/implementing-domain-driven-design.jpg")).plain
