Add accidental complexity holly wars.

--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -29,6 +29,14 @@ html
         section
           img(src=require("./pics/callback-hell.jpg")).plain
         section
+          h2 Accidental complexity
+          ul
+            li.fragment AsyncIO vs. Gevent
+            li.fragment PostgreSQL vs. MongoDB
+            li.fragment Python vs. Go
+            li.fragment Emacs vs. Vim
+            li.fragment Tabs vs. Spaces
+        section
           img(src=require("./pics/domain-driven-design.jpg")).plain
         section
           img(src=require("./pics/implementing-domain-driven-design.jpg")).plain
