Correct "Not about technology" slide.

--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -49,7 +49,8 @@ html
         section(data-background-image=require("./pics/ddd-schema.jpg") data-background-size="contain")
         section
           h2 Not about technology
-          p You have to master the tool first, than you can focus on #[b DDD].
+          p.fragment You have to master the tool first then you can focus on #[b DDD].
+          p.fragment In most domain models, most design patterns are technical noise.
         section(data-background-image=require("./pics/aggregate-root-1.jpg") data-background-size="contain")
         section(data-background-image=require("./pics/aggregate-root-2.jpg") data-background-size="contain")
         section(data-background-image=require("./pics/aggregate-root-3.jpg") data-background-size="contain")
