Move implementing DDD close to the dry-python announce.

--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -39,8 +39,6 @@ html
         section
           img(src=require("./pics/domain-driven-design.jpg")).plain
         section
-          img(src=require("./pics/implementing-domain-driven-design.jpg")).plain
-        section
           h2 What is the domain-driven design?
           p.fragment Focus on the core complexity and opportunity in the domain
           p.fragment Explore models in a collaboration of domain experts and software experts
@@ -51,6 +49,12 @@ html
           h2 Not about technology
           p.fragment You have to master the tool first then you can focus on #[b DDD].
           p.fragment In most domain models, most design patterns are technical noise.
+        section
+          img(src=require("./pics/implementing-domain-driven-design.jpg")).plain
+        section
+          h2
+            a(href="https://dry-python.org/") dry-python
+          img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dry-python.png").plain
         section(data-background-image=require("./pics/aggregate-root-1.jpg") data-background-size="contain")
         section(data-background-image=require("./pics/aggregate-root-2.jpg") data-background-size="contain")
         section(data-background-image=require("./pics/aggregate-root-3.jpg") data-background-size="contain")
