Add dry-python explanation to the introduction slide.

--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -54,6 +54,7 @@ html
         section
           h2
             a(href="https://dry-python.org/") dry-python
+          p A set of libraries for pluggable business logic components.
           img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dry-python.png").plain
         section(data-background-image=require("./pics/aggregate-root-1.jpg") data-background-size="contain")
         section(data-background-image=require("./pics/aggregate-root-2.jpg") data-background-size="contain")
