Move "What is a model?" slide.

--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -46,6 +46,10 @@ html
           p.fragment Speak #[b ubiquitous language] within a #[b bounded context]
         section(data-background-image=require("./pics/ddd-schema.jpg") data-background-size="contain")
         section
+          h2 What is a model?
+          p.fragment #[b HINT:] Not a UML diagram
+          p.fragment A set of services, entities and value objects expressed in classes, methods, and refs.
+        section
           h2 Not about technology
           p.fragment You have to master the tool first then you can focus on #[b DDD].
           p.fragment In most domain models, most design patterns are technical noise.
@@ -61,9 +65,6 @@ html
         section(data-background-image=require("./pics/aggregate-root-3.jpg") data-background-size="contain")
         section(data-background-image=require("./pics/aggregate-root-4.jpg") data-background-size="contain")
         section(data-background-image=require("./pics/aggregate-root-5.jpg") data-background-size="contain")
-        section
-          h2 What is a model?
-          p.fragment #[b HINT:] Not a UML diagram
         section
           h2 dataclasses
           pre
