Add slide mocks.

--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -61,6 +61,8 @@ html
           p A set of libraries for pluggable business logic components.
           img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dry-python.png").plain
         section
+          p TODO: app/services/ python package picture
+        section
           img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/stories.png").plain
           p Define a user story in the business transaction DSL.
           p Separate state, implementation and specification.
@@ -135,6 +137,8 @@ html
           h2 Sentry
         section
           h2 ELK
+        section
+          p TODO: app/aggregates/ python package picture
         section(data-background-image=require("./pics/aggregate-root-1.jpg") data-background-size="contain")
         section(data-background-image=require("./pics/aggregate-root-2.jpg") data-background-size="contain")
         section(data-background-image=require("./pics/aggregate-root-3.jpg") data-background-size="contain")
@@ -158,3 +162,27 @@ html
                   category: CategoryId
                   cost: Decimal
                   active_from_date: datetime
+        section
+          p TODO: app/repositories/ python package picture
+        section
+          p TODO: mappers aggregate to ORM
+        section
+          p TODO: mappers aggregate to Swagger
+        section
+          p TODO: mappers aggregate to GraphQL
+        section
+          p TODO: Pusher -> Ably migration. Why value objects matters.
+        section
+          p TODO: interfaces and DI
+        section
+          p TODO: mocks and testing
+        section
+          h2 Refactoring roadmap
+          ul
+            li.fragment No DDD at all
+            li.fragment Stories without contracts
+            li.fragment contracts and aggregates
+            li.fragment mappers
+            li.fragment DI
+        section
+          p TODO: The end
