--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -44,28 +44,30 @@ html
           p.fragment Explore models in a collaboration of domain experts and software experts
           p.fragment Write software that expresses those models explicitly
           p.fragment Speak #[b ubiquitous language] within a #[b bounded context]
-        section(data-background-image=require("./pics/ddd-schema.jpg") data-background-size="contain")
-        section
-          h2 What is a model?
-          p.fragment #[b HINT:] Not a UML diagram
-          p.fragment A set of services, entities and value objects expressed in classes, methods, and refs.
         section
           h2 Not about technology
           p.fragment You have to master the tool first then you can focus on #[b DDD].
           p.fragment In most domain models, most design patterns are technical noise.
         section
           img(src=require("./pics/implementing-domain-driven-design.jpg")).plain
+        section(data-background-image=require("./pics/ddd-schema.jpg") data-background-size="contain")
+        section(data-background-image=require("./pics/ddd-schema-models-selected.jpg") data-background-size="contain")
+        section
+          h2 What is a model?
+          p.fragment #[b HINT:] Not a UML diagram
+          p.fragment A set of services, entities and value objects expressed in classes, methods, and refs.
         section
           h2
             a(href="https://dry-python.org/") dry-python
           p A set of libraries for pluggable business logic components.
           img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dry-python.png").plain
-        section
-          p TODO: app/services/ python package picture
+        section(data-background-image=require("./pics/ddd-schema-services-selected.jpg") data-background-size="contain")
         section
           img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/stories.png").plain
           p Define a user story in the business transaction DSL.
           p Separate state, implementation and specification.
+        section
+          p TODO: app/services/ python package picture
         section
           h2 Specification DSL
           pre
@@ -137,6 +139,7 @@ html
           h2 Sentry
         section
           h2 ELK
+        section(data-background-image=require("./pics/ddd-schema-entities-selected.jpg") data-background-size="contain")
         section
           p TODO: app/aggregates/ python package picture
         section(data-background-image=require("./pics/aggregate-root-1.jpg") data-background-size="contain")
@@ -162,6 +165,7 @@ html
                   category: CategoryId
                   cost: Decimal
                   active_from_date: datetime
+        section(data-background-image=require("./pics/ddd-schema-repositories-selected.jpg") data-background-size="contain")
         section
           p TODO: app/repositories/ python package picture
         section
