Change drylabs copyright.

--- a/templates/components/copyright.html
+++ b/templates/components/copyright.html
@@ -1,3 +1,4 @@
 {% macro copyright() %}
-  &copy; Copyright 2018-2019 dry-python team.
+  Drylabs maintains dry-python and helps those who want to use it
+  inside their organizations. Read more at <a href="https://drylabs.io/">drylabs.io</a>
 {% endmacro %}
