Add button macro.

--- a/templates/components/welcome/intro.html
+++ b/templates/components/welcome/intro.html
@@ -1,11 +1,15 @@
+{% from 'components/button.html' import button %}
 {% macro intro(page) %}
   <div class="header-content container">
     <h1 class="header-content__title">{{ page.title }}</h1>
     <h2 class="header-content__description">{{ page.description|safe }}</h2>
     <div class="container header-button-group">
-      <a href="https://github.com/dry-python" class="header-button-group__button">
+      {% call button('https://github.com/dry-python') %}
         GitHub
-      </a>
+      {% endcall %}
+      {% call button('https://drylabs.io/') %}
+        Drylabs
+      {% endcall %}
     </div>
   </div>
 {% endmacro %}
