Add Drylabs to the navbar.

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -12,6 +12,7 @@
         </a>
       {% endfor %}
       <a href="https://github.com/dry-python" class="navbar-item">GitHub</a>
+      <a href="https://drylabs.io" class="navbar-item">Drylabs</a>
     </div>
   </nav>
 {% endmacro %}
