Add drylabs todo slide.

--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -238,4 +238,6 @@ html
             li.fragment mappers
             li.fragment DI
         section
+          p TODO: Drylabs
+        section
           p TODO: The end
