Enlarge callback picture.

--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -26,8 +26,7 @@ html
           p.fragment #[b Accidental complexity] refers to challenges that developers unintentionally make for themselves as a result of trying to solve a problem.
           p.fragment #[b Essential complexity] is just the nature of the beast you're trying to tame.
         section(data-background-image=require("./pics/interrupted-programmer.jpg") data-background-size="contain")
-        section
-          img(src=require("./pics/callback-hell.jpg")).plain
+        section(data-background-image=require("./pics/callback-hell.jpg") data-background-size="contain")
         section
           h2 Accidental complexity
           ul
