Add drylabs slide.

--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -236,7 +236,6 @@ html
             li.fragment contracts and aggregates
             li.fragment mappers
             li.fragment DI
-        section
-          p TODO: Drylabs
+        section(data-background-image=require("./pics/drylabs-io.png") data-background-size="contain")
         section
           p TODO: The end
