Add final slide.

--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -238,4 +238,4 @@ html
             li.fragment DI
         section(data-background-image=require("./pics/drylabs-io.png") data-background-size="contain")
         section
-          p TODO: The end
+          h2 Questions?
