Add pusher to ably migration slide.

--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -250,8 +250,7 @@ html
                       loadInvoice(id: %d)
                     }
                   """ % (id,)))
-        section
-          p TODO: Pusher -> Ably migration. Why value objects matters.
+        section(data-background-image=require("./pics/pusher-to-ably.png") data-background-size="contain")
         section
           p TODO: mocks and testing
         section
