Add dependencies logo slide.

--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -283,6 +283,10 @@ html
                       UserStream(User(primary_key=1))
                   )
         section
+          img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dependencies.png").plain
+          p Provide composition instead of inheritance.
+          p Solves top-down approach problem.
+        section
           h2 Dependency Injection
           pre
             code.python.
