Expand road map slide.

--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -307,9 +307,9 @@ html
           ul
             li.fragment No DDD at all
             li.fragment Stories without contracts
-            li.fragment contracts and aggregates
-            li.fragment mappers
-            li.fragment DI
+            li.fragment Contracts and aggregates
+            li.fragment Mappers
+            li.fragment Dependency injection
         section(data-background-image=require("./pics/drylabs-io.png") data-background-size="contain")
         section
           h2 Questions?
