Add elk mock slide.

--- a/slides/ddd-toolkit/index.pug
+++ b/slides/ddd-toolkit/index.pug
@@ -161,7 +161,7 @@ html
           h2(style="color: white") py.test
         section(data-background-image=require("../introducing-dry-python/pics/sentry.png") data-background-size="contain")
           h2 Sentry
-        section
+        section(data-background-image=require("./pics/elk-logs-ui.gif") data-background-size="contain")
           h2 ELK
         section(data-background-image=require("./pics/ddd-schema-entities-selected.jpg") data-background-size="contain")
         section(data-background-image=require("./pics/aggregate-root-1.jpg") data-background-size="contain")
