--- a/webpack/app/index.css
+++ b/webpack/app/index.css
@@ -1,5 +1,6 @@
 @import "styles/progress-bar.css";
 @import "styles/header.css";
+@import "styles/menu-icon.css";
 @import "styles/navbar.css";
 @import "styles/text.css";
 @import "styles/footer.css";
