--- a/webpack/app/styles/header.css
+++ b/webpack/app/styles/header.css
@@ -24,7 +24,7 @@
 }
 
 .header-button-group-button {
-  transition: background 0.3s;
+  transition: background 0.3s, border 0.3s, color 0.3s;
   @apply bg-transparent text-blue-dark font-semibold py-3 px-5 mx-5 border border-blue rounded no-underline;
 }
 
