--- a/templates/team.html
+++ b/templates/team.html
@@ -1,3 +1,5 @@
+{% from 'components/community_cards.html' import community_cards %}
+
 {% extends 'layout.html' %}
 
 {% block title %}
@@ -5,6 +7,7 @@
 {% endblock %}
 
 {% block body %}
+  {{ community_cards() }}
   <div class="container flex">
     {% for member in this.pagination.items %}
       <div class="w-1/3 py-10 px-5">
