Unify icon components.

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,4 +1,4 @@
-{% from 'components/menu_icon.html' import menu_icon %}
+{% from 'components/icons/hamburger.html' import icon as menu_icon %}
 
 {% macro navbar() %}
   <nav class="container navbar"
