--- a/templates/components/button.html
+++ b/templates/components/button.html
@@ -1,5 +1,5 @@
 {% macro button(url) %}
-  <a href="{{ url }}" class="header-button-group-button">
+  <a href="{{ url }}" class="header-button-group-button bg-transparent text-blue-900 font-semibold py-3 px-5 mx-5 border border-blue-500 rounded no-underline hover:text-white hover:bg-blue-500 hover:border-transparent">
     {{ caller() }}
   </a>
 {% endmacro %}
