--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,6 +1,6 @@
 {% macro header() %}
   <div class="header-container">
-    <header class="container header">
+    <header class="container mx-auto">
       {{ caller() }}
     </header>
   </div>
