--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@
     {% block body %}
     {% endblock %}
   </div>
-  <footer class="container footer">
+  <footer class="container p-4 text-center mx-auto">
     {{ copyright() }}
   </footer>
   {{ gitter_sidecar() }}
