--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,28 +1,35 @@
 {% from 'components/icons/hamburger.html' import icon as menu_icon %}
 
+{% set navbarItem = 'no-underline text-gray-900 mr-4 font-semibold align-middle border-b-2 border-solid border-transparent hover:text-black hover:border-black' %}
+
 {% macro navbar() %}
-  <nav class="container navbar"
+  <nav class="container mx-auto flex items-center py-4"
        data-controller="navbar">
-    <div class="navbar-left-group">
-      <a href="/" class="navbar-item">
+    <div class="w-3/5">
+      <a href="/" class="{{ navbarItem }}">
         dry-python
       </a>
     </div>
     <div class="block lg:hidden">
-      <button class="navbar-button"
+      <button class="flex items-center px-3 py-2 border rounded text-teal-400 border-teal-500 hover:text-white hover:border-white"
               data-action="navbar#toggle">
         {{ menu_icon('Menu') }}
       </button>
     </div>
-    <div class="navbar-right-group"
+    <div class="w-2/5 flex justify-end"
          data-target="navbar.menuItems">
       {% for path, label in bag('navbar').items() %}
-        <a href="{{ path|url }}" class="navbar-item">
+        <a href="{{ path|url }}" class="{{ navbarItem }}">
           {{ label }}
         </a>
       {% endfor %}
-      <a href="https://github.com/dry-python" class="navbar-item">GitHub</a>
-      <a href="https://drylabs.io" class="navbar-item">Drylabs</a>
+      <a href="https://github.com/dry-python" class="{{ navbarItem }}">
+        GitHub
+      </a>
+      {# FIXME: Move this `a` element into component. #}
+      <a href="https://drylabs.io" class="{{ navbarItem }}">
+        Drylabs
+      </a>
     </div>
   </nav>
 {% endmacro %}
