--- a/templates/components/welcome/intro.html
+++ b/templates/components/welcome/intro.html
@@ -1,10 +1,10 @@
 {% from 'components/button.html' import button %}
 
 {% macro intro(page) %}
-  <div class="header-content container">
-    <h1 class="header-content-title">{{ page.title }}</h1>
-    <h2 class="header-content-description">{{ page.description|safe }}</h2>
-    <div class="container header-button-group">
+  <div class="mx-auto text-center py-24 container header-container">
+    <h1 class="text-4xl mb-4">{{ page.title }}</h1>
+    <h2 class="text-xl font-normal mb-3">{{ page.description|safe }}</h2>
+    <div class="container flex justify-center py-4">
       {% call button('https://github.com/dry-python') %}
         GitHub
       {% endcall %}
